third_party/move/move-vm/transactional-tests/tests/function_values_safety/closure_store.baseline.exp
processed 2 tasks
task 0 lines 1-21:  publish
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000066::helpers'. Got VMError: {
    major_status: PACK_TYPE_MISMATCH_ERROR,
    sub_status: None,
    location: 0x66::helpers,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 1)],
}
task 1 lines 23-33:  run --verbose
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000066::helpers`
   ┌─ test:28:5
   │
28 │     call h::f_store_drop
   │     ^^^^^^^^^^^^^^^^^^^^

error: unknown module `0000000000000000000000000000000000000000000000000000000000000066::helpers`
   ┌─ test:29:5
   │
29 │     call h::pack
   │     ^^^^^^^^^^^^


