third_party/move/move-vm/transactional-tests/tests/function_values_safety/closure_store.masm
//# publish
module 0x66::helpers

struct R has key+drop
    f: |u64|u32 has store+drop

public fun pack(f: |u64|u32): R
    move_loc f
    pack R
    ret

public fun f_store_drop(): |u64|u32 has store+drop
    pack_closure 0x66::helpers::action, 0
    ret

#[persistent] fun action(x: u64): u32
    move_loc x
    cast_u32
    ld_u32 20
    add
    ret

//# run --verbose
script

use 0x66::helpers as h

fun ok()
    local f: |u64|u32
    call h::f_store_drop
    call h::pack
    st_loc f
    ret
